# Python-practices

./: .flake8  .gitignore  README.md  classes_and_objects.py  conditionals_and_loops.py  hints.py  lists.py  objects.py  pyproject.toml  pyproject.toml.example  regex.py  requirements.txt  strings.py  structure_dependencies.txt  terminal.sh  terminal_usage.sh
classes/: classes_and_objects.py
classes/examples/: complex_class.py  complex_points.py
conditionals/: conditionals_and_loops.py
data_types/: classes_and_objects.py  complex_class.py  lists.py  nested_lists.py  strings.py
data_types/classes/: classes_and_objects.py  complex_class.py  complex_points.py
data_types/collections/: counter.py  defaultdict.py
data_types/lists/: lists.py  nested_lists.py  numbers.py
data_types/sets/: set.py  set_add.py
data_types/strings/: capitalize.py  mat_design.py  mutations.py  number_base.py  output.py  print.py  rangoli_design.py  strings.py  text_wrap.py  validators.py
exceptions/: division.py
libraries/: argparse.py  itertools.py  logging.py  numpy_lib.py  openpyxl.py  pathlib.py  regex.py  sys.py  time.py
readability/: hints.py
scraping/: airdates.py  apartment.py
src/classes/: classes_and_objects.py  enum.py
src/concurrency/: groups.py  in_sync_with_barriers.py  task_groups.py
src/conditionals/: conditionals_and_loops.py
src/exceptions/: better_messages.py  ex_notes.py  except_star.py  zero_cost_exceptions.py
src/libraries/: argparse.py  click.py  datetime.py  logging.py  openpyxl.py  pathlib.py  pydantic.py  regex.py  sys.py  time.py
src/performance_optimization/: explanation.txt  specialize_final.py  specialize_start.py
src/readability/: hints.py
(+26 files in other folders)
