[tool.poetry]
name = "python-practices"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_practices"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
numpy = "^1.24.2"
click = "^8.1.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
