[tool.poetry]
name = "python-practices"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_practices"}]

[tool.poetry.dependencies]
python = "3.12"
requests = "2.*"
numpy = "*"
click = "*"
openpyxl = "*"
httpx = "*"
pydantic = "*"


[tool.poetry.group.dev.dependencies]
autopep8 = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
